# docpipe

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  customer_validation.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: adapter-architecture.md  benchmarks.md  case-study-company-knowledge-base.md  commercial-delivery.md  demo-result-preview.md  demo-walkthrough.md  deployment.md  industry-templates.md  limitations.md  localization.md  product-brief.md  roadmap.md  smoke-test.md  synthetic-load-test.md  validation.md
docs/releases/: v0.1.0.md
examples/company-knowledge-base/: 01-员工手册.md  02-客服FAQ.csv  03-产品手册.txt  04-销售话术.md  05-培训页面.html  06-资料清单.csv
samples/: company-policy.md  product-manual.txt  sales-faq.html  support-tickets.csv  vendor-evaluation.json
samples-cn/: 产品手册.txt  企业制度.md  客服FAQ.csv
scripts/: run_checks.bat  run_checks.ps1  run_demo.bat  run_demo.ps1  run_web.bat  run_web.ps1
src/docpipe/: __init__.py  chunker.py  cli.py  engines.py  exports.py  history.py  i18n.py  models.py  pipeline.py  synthetic.py  templates.py  web.py
tests/: test_chunker.py  test_exports.py  test_history.py  test_i18n.py  test_pipeline.py  test_synthetic.py  test_templates.py
