[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docpipe"
version = "0.1.0"
description = "Enterprise document conversion pipeline for Markdown, JSON, and RAG-ready chunks."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [
  { name = "Lackylu7" }
]
dependencies = [
  "markitdown>=0.1.0",
  "docling>=2.0.0",
  "pydantic>=2.8.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "streamlit>=1.38.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
docpipe = "docpipe.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/docpipe"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
